--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,12 +22,12 @@ subtle = { version = "2.2", default-features = false }
 crunchy = "0.2"
 
 [dependencies.sgx_tstd]
-git = "https://github.com/baidu/rust-sgx-sdk"
-rev="v1.0.9"
+git = "https://github.com/apache/incubator-teaclave-sgx-sdk"
+tag = "v1.1.0"
 
 [dependencies.sgx_rand]
-git = "https://github.com/baidu/rust-sgx-sdk"
-rev="v1.0.9"
+git = "https://github.com/apache/incubator-teaclave-sgx-sdk"
+tag = "v1.1.0"
 optional = true
 
 [dev-dependencies]
